--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -114,3 +114,6 @@ color: black;
             padding-bottom: 1rem;
         height: fit-content;
            }
+.project-new{
+    margin-bottom: 100px;
+}
