--- a/src/App.css
+++ b/src/App.css
@@ -438,12 +438,13 @@ border-radius: 5px;
     
     }
     .btn{
-        height: 40px;
+        height: 30px;
         display: flex;
         justify-content: center;
         align-items: center;
        margin: 50px auto;
-        width:100px;
+        width:80px;
+        font-size: 12px;
         border: 1px solid rgb(182, 182, 15);
     border-radius: 5px;
     color: rgb(5, 0, 0);
