--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -53,7 +53,7 @@ color: black;
     font-size: 20px;
     font-weight: 500;
     margin-left: 30px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 .paras{
     margin-top: 20px;
