--- a/src/App.css
+++ b/src/App.css
@@ -673,13 +673,19 @@ background: rgb(168, 168, 20) ;
         }
         .admin{
             color: #fff;
-            margin-left: 470px;
+            /* margin-left: 470px; */
         }
         .stripe{
             color: yellow;
-            margin-left: 600px;
+            /* margin-left: 600px; */
         }
         .yes{
             color: white;
-            margin-left: 480px;
+            /* margin-left: 480px; */
+        }
+        .cec{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
