--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -3,6 +3,8 @@
     flex-direction:column;
     color: white;
     margin-top:  50px;
+    align-items: center;
+    justify-content: center;
 }
 .new-left{
     display: flex;
@@ -42,7 +44,9 @@ color: black;
     margin-top: 30px;
     width: 900px;
     height: 300px;
-    margin-left: 240px;
+    /* margin-left: 240px; */
+    align-items: center;
+    justify-content: center;
     border-radius: 10px 80px 10px 10px;
    background: rgb(255, 255, 75);
    box-shadow: 3px 3px 3px rgb(109, 114, 101);
